--- a/.github/workflows/infrastructure.yaml
+++ b/.github/workflows/infrastructure.yaml
@@ -1,4 +1,4 @@
-name: Deployment
+name: Infrastructure
 on:
   push:
     branches:
@@ -46,32 +46,10 @@ jobs:
         terragrunt_version: latest
     - name: Terragrunt Apply
       id: terragrunt
-      run: |-
-        terragrunt run-all apply --terragrunt-non-interactive
-        echo "url=https://recognize.nl" >> $GITHUB_OUTPUT # Change this URL based on the deployed infrastructure
+      run:  terragrunt run-all apply --terragrunt-non-interactive
       env:
         ARM_USE_OIDC: true
         ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
         ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
         ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
         ARM_SKIP_PROVIDER_REGISTRATION: true
-
-  security-reporting:
-    needs: [infrastructure]
-    name: Security report
-    runs-on: ubuntu-latest
-    steps:
-    - uses: recognizegroup/recognize-internal-security-assistant-action@v2
-      with:
-        urls: ${{ needs.infrastructure.outputs.url }}
-        reporting-application-insights-connection-string: ${{ secrets.SECURITY_REPORT_APPLICATION_INSIGHTS_CONNECTION_STRING }}
-
-  policy-versions:
-    name: Policy version scan
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v3
-    - uses: recognizegroup/recognize-cli-action@v1
-      with:
-        application-insights-key: ${{ secrets.RECOGNIZE_CLI_APPLICATION_INSIGHTS_KEY }}
