--- a/cli/package.json
+++ b/cli/package.json
@@ -1,25 +1,70 @@
 {
   "name": "@recognizebv/sc3000-cli",
   "version": "1.0.0",
-  "main": "index.js",
-  "private": true,
+  "description": "The CLI-tool for the Super Cheetah 3000 project code generator.",
+  "author": "Recognize <@recognizegroup>",
+  "bin": {
+    "sc3000": "./bin/run"
+  },
+  "homepage": "https://github.com/recognizegroup/recognize-super-cheetah-3000",
+  "license": "LGPL-3.0",
+  "main": "dist/index.js",
+  "repository": "recognizegroup/recognize-super-cheetah-3000",
+  "files": [
+    "/bin",
+    "/dist",
+    "/npm-shrinkwrap.json",
+    "/oclif.manifest.json"
+  ],
   "dependencies": {
-    "chalk": "^5.2.0",
-    "clear": "^0.1.0",
-    "clui": "^0.3.6",
-    "configstore": "^6.0.0",
-    "figlet": "^1.5.2",
-    "inquirer": "^9.1.4",
-    "minimist": "^1.2.7"
+    "@oclif/core": "^2",
+    "@oclif/plugin-help": "^5",
+    "@oclif/plugin-plugins": "^2.4.3"
   },
   "devDependencies": {
     "@tsconfig/node18": "^1.0.1",
-    "@types/ejs": "^3.1.1",
-    "@types/node": "^18.11.18",
-    "typescript": "^4.9.4"
+    "@oclif/test": "^2.3.11",
+    "@types/chai": "^4",
+    "@types/mocha": "^9.0.0",
+    "@types/node": "^16.18.20",
+    "chai": "^4",
+    "eslint": "^7.32.0",
+    "eslint-config-oclif": "^4",
+    "eslint-config-oclif-typescript": "^1.0.3",
+    "mocha": "^9",
+    "oclif": "^3",
+    "shx": "^0.3.3",
+    "ts-node": "^10.9.1",
+    "tslib": "^2.5.0",
+    "typescript": "^4.9.5"
+  },
+  "oclif": {
+    "bin": "sc3000",
+    "dirname": "sc3000",
+    "commands": "./dist/commands",
+    "plugins": [
+      "@oclif/plugin-help",
+      "@oclif/plugin-plugins"
+    ],
+    "topicSeparator": " ",
+    "topics": {
+    }
   },
   "scripts": {
-    "build": "tsc -p tsconfig.json --outDir dist",
-    "watch": "tsc -p tsconfig.json --outDir dist --watch"
-  }
+    "build": "shx rm -rf dist && tsc -b",
+    "lint": "eslint . --ext .ts --config .eslintrc",
+    "postpack": "shx rm -f oclif.manifest.json",
+    "posttest": "yarn lint",
+    "prepack": "yarn build && oclif manifest && oclif readme",
+    "test": "mocha --forbid-only \"test/**/*.test.ts\"",
+    "version": "oclif readme && git add README.md"
+  },
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "bugs": "https://github.com/recognizegroup/recognize-super-cheetah-3000/issues",
+  "keywords": [
+    "oclif"
+  ],
+  "types": "dist/index.d.ts"
 }
