RECGEN-1 - Update working directory

--- a/.github/workflows/cli.yaml
+++ b/.github/workflows/cli.yaml
@@ -15,6 +15,10 @@ permissions:
   id-token: write
   contents: read
 
+defaults:
+  run:
+    working-directory: cli/
+
 jobs:
   test:
     runs-on: ubuntu-latest
