--- a/cli/package.json
+++ b/cli/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "@oclif/core": "^2",
     "@oclif/plugin-help": "^5",
-    "@oclif/plugin-plugins": "^2.4.3"
+    "@oclif/plugin-plugins": "^2.4.3",
+    "@oclif/plugin-update": "^3.1.9"
   },
   "devDependencies": {
     "@tsconfig/node18": "^1.0.1",
@@ -44,7 +45,8 @@
     "commands": "./dist/commands",
     "plugins": [
       "@oclif/plugin-help",
-      "@oclif/plugin-plugins"
+      "@oclif/plugin-plugins",
+      "@oclif/plugin-update"
     ],
     "topicSeparator": " ",
     "topics": {
