--- a/cli/package.json
+++ b/cli/package.json
@@ -59,7 +59,8 @@
     "posttest": "yarn lint",
     "prepack": "yarn build && oclif manifest && oclif readme",
     "test": "mocha --forbid-only \"test/**/*.test.ts\"",
-    "version": "oclif readme && git add README.md"
+    "version": "oclif readme && git add README.md",
+    "watch": "tsc -p tsconfig.json --outDir dist --watch"
   },
   "engines": {
     "node": ">=16.0.0"
