--- a/generator/package.json
+++ b/generator/package.json
@@ -4,11 +4,25 @@
   "main": "dist/index.js",
   "private": true,
   "types": "dist/index.d.ts",
+  "engines": {
+    "node": ">=12.0.0"
+  },
   "devDependencies": {
     "@tsconfig/node18": "^1.0.1",
+    "@types/chai": "^4",
     "@types/ejs": "^3.1.1",
+    "@types/mocha": "^9.0.0",
     "@types/node": "^18.11.18",
-    "typescript": "^4.9.4"
+    "@types/sinon": "^10.0.13",
+    "eslint-config-oclif": "^4",
+    "eslint-config-oclif-typescript": "^1.0.3",
+    "chai": "^4",
+    "mocha": "^9",
+    "sinon": "^15.0.3",
+    "ts-node": "^10.9.1",
+    "tslib": "^2.5.0",
+    "typescript": "^4.9.4",
+    "eslint": "^7.32.0"
   },
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
@@ -17,6 +31,8 @@
   },
   "scripts": {
     "build": "tsc -p tsconfig.json --outDir dist",
-    "watch": "tsc -p tsconfig.json --outDir dist --watch"
+    "watch": "tsc -p tsconfig.json --outDir dist --watch",
+    "test": "mocha --forbid-only \"test/**/*.test.ts\"",
+    "lint": "eslint . --ext .ts --config .eslintrc"
   }
 }
