--- a/generator/tsconfig.json
+++ b/generator/tsconfig.json
@@ -3,7 +3,9 @@
     "compilerOptions": {
       "outDir": "dist",
       "declaration": true,
-      "declarationMap": true
+      "declarationMap": true,
+      "esModuleInterop": true,
+      "allowSyntheticDefaultImports": true
     },
     "include": ["src"],
     "exclude": ["node_modules"]
