--- a/cli/.eslintrc
+++ b/cli/.eslintrc
@@ -7,6 +7,7 @@
   "rules": {
     "no-useless-constructor": 0,
     "@typescript-eslint/no-empty-function": 0,
-    "node/no-extraneous-import": 0
+    "node/no-extraneous-import": 0,
+    "node/no-missing-import": 0
   }
 }
