--- a/.github/workflows/cli.yaml
+++ b/.github/workflows/cli.yaml
@@ -51,6 +51,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18.x
+      - name: Link and prepare generator
+        run: cd ../generator && yarn && yarn build && yarn link && cd ../cli && yarn link @recognizebv/sc3000-generator
       - name: Install dependencies
         run: yarn
       - name: Write release version
