--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "watch:cli": "cd cli/ && yarn watch",
+    "watch:definition": "cd definition/ && yarn watch",
     "watch:generator": "cd generator/ && yarn watch",
     "watch:generator:kotlin-spring-backend": "cd generators/kotlin-spring-backend-generator/ && yarn watch",
-    "watch:all": "concurrently \"yarn watch:cli\" \"yarn watch:generator\" \"yarn watch:generator:kotlin-spring-backend\""
+    "watch:all": "concurrently \"yarn watch:cli\" \"yarn watch:generator\" \"yarn watch:generator:kotlin-spring-backend\" \"yarn watch:definition\""
   },
   "keywords": [],
   "author": "",
