--- a/.github/workflows/definition.yaml
+++ b/.github/workflows/definition.yaml
@@ -26,7 +26,7 @@ jobs:
         with:
           node-version: 18.x
       - name: Link and prepare generator
-        run: cd ../generator && yarn && yarn build && yarn link && cd ../cli && yarn link @recognizebv/sc3000-generator
+        run: cd ../generator && yarn && yarn build && yarn link && cd ../definition && yarn link @recognizebv/sc3000-generator
       - name: Install dependencies
         run: yarn
       - name: Build
