--- a/generator/package.json
+++ b/generator/package.json
@@ -13,6 +13,7 @@
     "@types/ejs": "^3.1.1",
     "@types/mocha": "^9.0.0",
     "@types/node": "^18.11.18",
+    "@types/nunjucks": "^3.2.2",
     "@types/sinon": "^10.0.13",
     "chai": "^4",
     "eslint": "^7.32.0",
@@ -28,6 +29,7 @@
     "@faker-js/faker": "^7.6.0",
     "ejs": "^3.1.8",
     "gray-matter": "^4.0.3",
+    "nunjucks": "^3.2.4",
     "toposort": "^2.0.2"
   },
   "scripts": {
