--- a/generator/.eslintrc
+++ b/generator/.eslintrc
@@ -9,6 +9,8 @@
     "node/no-unpublished-import": 0,
     "no-await-in-loop": 0,
     "@typescript-eslint/no-empty-function": 0,
-    "@typescript-eslint/explicit-module-boundary-types": 0
+    "@typescript-eslint/explicit-module-boundary-types": 0,
+    "max-depth": ["error", 5],
+    "unicorn/no-array-reduce": 0
   }
 }
