--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -94,6 +94,7 @@ jobs:
         working-directory: generator/
     env:
       NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      TAG: ${{ github.ref_name }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -106,6 +107,6 @@ jobs:
       - name: Build
         run: yarn build
       - name: Change version to ${{ github.ref_name }}
-        run: yarn version --new-version ${{ github.ref_name#v }} --no-git-tag-version
+        run: yarn version --new-version ${TAG#v}
       - name: Publish
         run: yarn publish --access public
