RECGEN-21 - Mark as public

--- a/generator/package.json
+++ b/generator/package.json
@@ -2,7 +2,7 @@
   "name": "@recognizebv/sc3000-generator",
   "version": "1.0.0",
   "main": "dist/index.js",
-  "private": true,
+  "private": false,
   "types": "dist/index.d.ts",
   "engines": {
     "node": ">=12.0.0"
