RECGEN-21 - Add login command

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -108,5 +108,36 @@ jobs:
         run: yarn build
       - name: Change version to ${{ github.ref_name }}
         run: yarn version --new-version ${TAG#v} --no-git-tag-version
+      - name: Login to registry
+        run: echo "//registry.yarnpkg.com/:_authToken=$NODE_AUTH_TOKEN" >> ~/.npmrc
+      - name: Publish
+        run: yarn publish --access public
+
+  publish-definition:
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
+    runs-on: ubuntu-latest
+    name: Publish Definition
+    needs: [test-generator, test-cli, test-definition, publish-generator]
+    defaults:
+      run:
+        working-directory: definition/
+    env:
+      NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      TAG: ${{ github.ref_name }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18.x
+      - name: Install dependencies
+        run: yarn
+      - name: Build
+        run: yarn build
+      - name: Change version to ${{ github.ref_name }}
+        run: yarn version --new-version ${TAG#v} --no-git-tag-version
+      - name: Login to registry
+        run: echo "//registry.yarnpkg.com/:_authToken=$NODE_AUTH_TOKEN" >> ~/.npmrc
       - name: Publish
         run: yarn publish --access public
