--- a/definition/package.json
+++ b/definition/package.json
@@ -25,6 +25,7 @@
     "eslint": "^7.32.0"
   },
   "dependencies": {
+    "@recognizebv/sc3000-generator": "../generator"
   },
   "scripts": {
     "build": "tsc -p tsconfig.json --outDir dist",
