--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -133,6 +133,8 @@ jobs:
           node-version: 18.x
       - name: Install dependencies
         run: yarn
+      - name: Prepare generator
+        run: cd ../generator && yarn && yarn build && cd ../definition
       - name: Build
         run: yarn build
       - name: Change version to ${{ github.ref_name }}
