--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -144,9 +144,9 @@ jobs:
       - name: Publish
         run: yarn publish --access public
 
-  create-release:
-    runs-on: ubuntu-latest
-    name: Create release
+  create-release-macos:
+    runs-on: macos-latest
+    name: Create release (macOS)
     needs: [test-generator, test-cli, test-definition, publish-generator, publish-definition]
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
     defaults:
@@ -176,10 +176,85 @@ jobs:
         run: yarn build
       - name: Pack MacOS
         run: npx oclif pack macos
-      - uses: softprops/action-gh-release@v1
+      - name: Upload
+        uses: actions/upload-artifact@v3
         with:
-          prerelease: ${{ contains(github.ref, '-beta') }}
-          generate_release_notes: true
-          files: |
-            cli/dist/*.tar.gz
-            cli/dist/*.tar.xz
+          name: macos
+          path: cli/dist/*.tar.gz
+
+  create-release-windows:
+    runs-on: windows-latest
+    name: Create release (Windows)
+    needs: [test-generator, test-cli, test-definition, publish-generator, publish-definition]
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
+    defaults:
+      run:
+        working-directory: cli/
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18.x
+      - name: Link and prepare generator
+        run: cd ../generator && yarn && yarn build && cd ../cli
+      - name: Install dependencies
+        run: yarn
+      - name: Write release version
+        run: |
+          VERSION=${GITHUB_REF_NAME#v}
+          echo Version: $VERSION
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+      - name: Change version
+        uses: reedyuk/npm-version@1.1.1
+        with:
+          version: ${{ env.VERSION }}
+      - name: Build
+        run: yarn build
+      - name: Pack Windows
+        run: npx oclif pack win
+      - name: Upload
+        uses: actions/upload-artifact@v3
+        with:
+          name: windows
+          path: cli/dist/*.tar.gz
+
+  create-release-ubuntu:
+    runs-on: ubuntu-latest
+    name: Create release (Ubuntu)
+    needs: [test-generator, test-cli, test-definition, publish-generator, publish-definition]
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
+    defaults:
+      run:
+        working-directory: cli/
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18.x
+      - name: Link and prepare generator
+        run: cd ../generator && yarn && yarn build && cd ../cli
+      - name: Install dependencies
+        run: yarn
+      - name: Write release version
+        run: |
+          VERSION=${GITHUB_REF_NAME#v}
+          echo Version: $VERSION
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+      - name: Change version
+        uses: reedyuk/npm-version@1.1.1
+        with:
+          version: ${{ env.VERSION }}
+      - name: Build
+        run: yarn build
+      - name: Pack Ubuntu
+        run: npx oclif pack deb
+      - name: Upload
+        uses: actions/upload-artifact@v3
+        with:
+          name: ubuntu
+          path: cli/dist/*.tar.gz
+
