RECGEN-21 - Attempt to change version

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -168,10 +168,8 @@ jobs:
           VERSION=${GITHUB_REF_NAME#v}
           echo Version: $VERSION
           echo "VERSION=$VERSION" >> $GITHUB_ENV
-      - name: Change version
-        uses: reedyuk/npm-version@1.1.1
-        with:
-          version: ${{ env.VERSION }}
+      - name: Change version to ${{ github.ref_name }}
+        run: yarn version --new-version ${VERSION} --no-git-tag-version
       - name: Build
         run: yarn build
       - name: Pack MacOS
@@ -179,6 +177,7 @@ jobs:
       - name: Upload
         uses: actions/upload-artifact@v3
         with:
+          retention-days: 1
           name: macos
           path: cli/dist/macos/
 
@@ -206,10 +205,8 @@ jobs:
           $VERSION = $Env:GITHUB_REF_NAME -replace 'v'
           Write-Host "Version: $VERSION"
           Write-Output "VERSION=$VERSION" | Out-File -FilePath $Env:GITHUB_ENV -Append
-      - name: Change version
-        uses: reedyuk/npm-version@1.1.1
-        with:
-          version: ${{ env.VERSION }}
+      - name: Change version to ${{ github.ref_name }}
+        run: yarn version --new-version ${VERSION} --no-git-tag-version
       - name: Build
         run: yarn build
       - name: Pack Windows
@@ -217,6 +214,7 @@ jobs:
       - name: Upload
         uses: actions/upload-artifact@v3
         with:
+          retention-days: 1
           name: windows
           path: cli/dist/win32
 
@@ -244,10 +242,8 @@ jobs:
           VERSION=${GITHUB_REF_NAME#v}
           echo Version: $VERSION
           echo "VERSION=$VERSION" >> $GITHUB_ENV
-      - name: Change version
-        uses: reedyuk/npm-version@1.1.1
-        with:
-          version: ${{ env.VERSION }}
+      - name: Change version to ${{ github.ref_name }}
+        run: yarn version --new-version ${VERSION} --no-git-tag-version
       - name: Build
         run: yarn build
       - name: Pack Ubuntu
@@ -255,6 +251,7 @@ jobs:
       - name: Upload
         uses: actions/upload-artifact@v3
         with:
+          retention-days: 1
           name: ubuntu
           path: cli/dist/deb
 
@@ -284,4 +281,7 @@ jobs:
           prerelease: ${{ contains(github.ref, '-beta') }}
           generate_release_notes: true
           files: |
-            dist/*
+            dist/*.deb
+            dist/*.dmg
+            dist/*.exe
+            dist/*.pkg
