RECGEN-21 - Add file

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,6 +29,8 @@ jobs:
           node-version: 18.x
       - name: Prepare generator
         run: cd ../generator && yarn && yarn build && cd ../cli
+      - name: Prepare definition
+        run: cd ../definition && yarn && yarn build && cd ../cli
       - name: Install dependencies
         run: yarn
       - name: Build
@@ -161,6 +163,8 @@ jobs:
           node-version: 18.x
       - name: Link and prepare generator
         run: cd ../generator && yarn && yarn build && cd ../cli && mkdir -p ./tmp && cp -r ../generator/ ./tmp/generator
+      - name: Link and prepare definition
+        run: cd ../definition && yarn && yarn build && cd ../cli && mkdir -p ./tmp && cp -r ../definition/ ./tmp/definition
       - name: Install dependencies
         run: yarn
       - name: Write release version
@@ -198,6 +202,8 @@ jobs:
           node-version: 18.x
       - name: Link and prepare generator
         run: cd ../generator && yarn && yarn build && cd ../cli && mkdir -p ./tmp && cp -r ../generator/ ./tmp/generator
+      - name: Link and prepare definition
+        run: cd ../definition && yarn && yarn build && cd ../cli && mkdir -p ./tmp && cp -r ../definition/ ./tmp/definition
       - name: Install dependencies
         run: yarn
       - name: Write release version
@@ -235,6 +241,8 @@ jobs:
           node-version: 18.x
       - name: Link and prepare generator
         run: cd ../generator && yarn && yarn build && cd ../cli && mkdir -p ./tmp && cp -r ../generator/ ./tmp/generator
+      - name: Link and prepare definition
+        run: cd ../definition && yarn && yarn build && cd ../cli && mkdir -p ./tmp && cp -r ../definition/ ./tmp/definition
       - name: Install dependencies
         run: yarn
       - name: Write release version
