--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -164,7 +164,7 @@ jobs:
       - name: Link and prepare generator
         run: cd ../generator && yarn && yarn build && cd ../cli && mkdir -p ./tmp && cp -r ../generator/ ./tmp/generator
       - name: Link and prepare definition
-        run: cd ../definition && yarn && yarn build && cd ../cli && mkdir -p ./tmp && cp -r ../definition/ ./tmp/definition
+        run: cd ../definition && yarn && yarn build && cd ../cli && cp -r ../definition/ ./tmp/definition
       - name: Install dependencies
         run: yarn
       - name: Write release version
@@ -203,7 +203,7 @@ jobs:
       - name: Link and prepare generator
         run: cd ../generator && yarn && yarn build && cd ../cli && mkdir -p ./tmp && cp -r ../generator/ ./tmp/generator
       - name: Link and prepare definition
-        run: cd ../definition && yarn && yarn build && cd ../cli && mkdir -p ./tmp && cp -r ../definition/ ./tmp/definition
+        run: cd ../definition && yarn && yarn build && cd ../cli && cp -r ../definition/ ./tmp/definition
       - name: Install dependencies
         run: yarn
       - name: Write release version
@@ -242,7 +242,7 @@ jobs:
       - name: Link and prepare generator
         run: cd ../generator && yarn && yarn build && cd ../cli && mkdir -p ./tmp && cp -r ../generator/ ./tmp/generator
       - name: Link and prepare definition
-        run: cd ../definition && yarn && yarn build && cd ../cli && mkdir -p ./tmp && cp -r ../definition/ ./tmp/definition
+        run: cd ../definition && yarn && yarn build && cd ../cli && cp -r ../definition/ ./tmp/definition
       - name: Install dependencies
         run: yarn
       - name: Write release version
