--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -162,9 +162,9 @@ jobs:
         with:
           node-version: 18.x
       - name: Link and prepare generator
-        run: cd ../generator && yarn && yarn build && cd ../cli && mkdir -p ./tmp && cp -r ../generator/ ./tmp/generator
+        run: cd ../generator && yarn && yarn build && yarn --production=true && cd ../cli && mkdir -p ./tmp && cp -r ../generator/ ./tmp/generator
       - name: Link and prepare definition
-        run: cd ../definition && yarn && yarn build && cd ../cli && cp -r ../definition/ ./tmp/definition
+        run: cd ../definition && yarn && yarn build && cd ../cli && cp -r ../definition/ ./tmp/definition && rm -rf ./tmp/definition/node_modules
       - name: Install dependencies
         run: yarn
       - name: Write release version
@@ -201,9 +201,9 @@ jobs:
         with:
           node-version: 18.x
       - name: Link and prepare generator
-        run: cd ../generator && yarn && yarn build && cd ../cli && mkdir -p ./tmp && cp -r ../generator/ ./tmp/generator
+        run: cd ../generator && yarn && yarn build && yarn --production=true && cd ../cli && mkdir -p ./tmp && cp -r ../generator/ ./tmp/generator
       - name: Link and prepare definition
-        run: cd ../definition && yarn && yarn build && cd ../cli && cp -r ../definition/ ./tmp/definition
+        run: cd ../definition && yarn && yarn build && cd ../cli && cp -r ../definition/ ./tmp/definition && rm -rf ./tmp/definition/node_modules
       - name: Install dependencies
         run: yarn
       - name: Write release version
@@ -241,9 +241,9 @@ jobs:
         with:
           node-version: 18.x
       - name: Link and prepare generator
-        run: cd ../generator && yarn && yarn build && cd ../cli && mkdir -p ./tmp && cp -r ../generator/ ./tmp/generator
+        run: cd ../generator && yarn && yarn build && yarn --production=true && cd ../cli && mkdir -p ./tmp && cp -r ../generator/ ./tmp/generator
       - name: Link and prepare definition
-        run: cd ../definition && yarn && yarn build && cd ../cli && cp -r ../definition/ ./tmp/definition
+        run: cd ../definition && yarn && yarn build && cd ../cli && cp -r ../definition/ ./tmp/definition && rm -rf ./tmp/definition/node_modules
       - name: Install dependencies
         run: yarn
       - name: Write release version
