RECGEN-21 - Update CI process and start on publishing generators

--- a/.github/workflows/publish-kotlin-generator.yaml
+++ b/.github/workflows/publish-kotlin-generator.yaml
@@ -2,7 +2,7 @@ name: Publish Kotlin Generator
 on:
   push:
     branches:
-      - '*'
+      - feature/RECGEN-21-install-option
 
 jobs:
   publish:
