--- a/generators/typescript-angular-frontend-generator/package.json
+++ b/generators/typescript-angular-frontend-generator/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.11",
   "repository": "https://github.com/recognizegroup/super-cheetah-3000",
   "main": "dist/index.js",
-  "dependencies": {},
+  "dependencies": {
+    "@recognizebv/sc3000-generator": "^0.0.1"
+  },
   "types": "dist/index.d.ts",
   "devDependencies": {
     "@tsconfig/node18": "^1.0.1",
