--- a/.github/workflows/publish-generator.yaml
+++ b/.github/workflows/publish-generator.yaml
@@ -50,18 +50,17 @@ jobs:
         run: yarn build
       - name: Request access token for Azure AD
         id: azure_login
-        uses: Azure/azure-resource-login-action@v1.0.0
-        with:
-          resource-url: ${{ inputs.registry_azure_client_id }}/.default
-          creds: |-
-            {
-                "clientId": "${{ inputs.registry_azure_client_id }}",
-                "clientSecret": "${{ secrets.registry_azure_client_secret }}",
-                "subscriptionId": "00000000-0000-0000-0000-000000000000",
-                "tenantId": "${{ inputs.registry_azure_tenant_id }}"
-            }
+        run: |-
+          export TOKEN=$(curl --location 'https://login.microsoftonline.com/${{ inputs.registry_azure_tenant_id }}/oauth2/v2.0/token' \
+              --header 'Content-Type: application/x-www-form-urlencoded' \
+              --data-urlencode 'client_secret=${{ secrets.registry_azure_client_secret }}' \
+              --data-urlencode 'client_id=${{ inputs.registry_azure_client_id }}' \
+              --data-urlencode 'scope=${{ inputs.registry_azure_client_id }}/.default' \
+              --data-urlencode 'grant_type=client_credentials' | jq -r '.access_token')
+          
+          echo "token=$TOKEN" >> "$GITHUB_OUTPUT"
       - name: Login to registry
-        run: echo "//${{ inputs.registry_locaiton }}/:_authToken=$NODE_AUTH_TOKEN" >> ~/.npmrc
+        run: echo "//${{ inputs.registry_location }}/:_authToken=$NODE_AUTH_TOKEN" >> ~/.npmrc
         env:
           NODE_AUTH_TOKEN: ${{ steps.azure_login.outputs.token }}
       - name: Change version to ${{ github.ref_name }}
