RECGEN-21 - Add Windows only

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -194,10 +194,12 @@ jobs:
       run:
         working-directory: cli/
     steps:
-      - run: sudo apt update
-      - run: sudo apt install nsis p7zip-full p7zip-rar -y
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Update dependencies
+        run: sudo apt update
+      - name: Install software
+        run: sudo apt install nsis p7zip-full p7zip-rar -y
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
